Update to DiscoveryPage

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "function": {
-    "myFunction": {
+    "Practice": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
