--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^5.3.3",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "sass": "^1.54.5",
     "web-vitals": "^2.1.4"
